# zero-to-hero-python-101

./: Makefile  README.md
map_reduce_101/: .gitignore  Makefile  pyproject.toml  tricks.yaml
map_reduce_101/map_reduce_101/: __init__.py
map_reduce_101/notebooks/: challenges.ipynb  dictionaries.ipynb  other-ds.ipynb
scripts/: update_pyproject_toml.py
templates/: .flake8-template
